--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Educação</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="make_registration_txt">Faça seu cadastro</string>
     <string name="name_register_edTxt">Nome</string>
@@ -24,7 +23,13 @@
         <item>Mulher</item>
     </string-array>
     <string name="title_activity_teste">TesteActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="become_monitor">Tornar-se monitor</string>
+    <string name="do_it_later">FAZER ISSO DEPOIS</string>
+    <string name="why_be_monitor">POR QUE SER UM MONITOR?</string>
+    <string name="reason_monitor_register">Se tornando um monitor você pode oferecer ajuda a outras pessoas com as matérias que tem facilidade, e desta forma ajudar a comunidade NOME a crescer!</string>
+    <string name="what_subject">Qual matéria você pode ensinar?</string>
+    <string name="profile_menu">Profile</string>
+    <string name="edit_subjects_profile">Editar matérias</string>
+    <string name="edit_password_profile">Alterar senha</string>
 
 </resources>
